@@ -1,3 +1,4 @@
+Rem Several declaration and initialisation variants for test of Analyser, Executor, and Generators 
 Rem Generated by Structorizer 3.32-26 
 
 Rem Copyright (C) 2017-09-18 Kay Gürtzig 
@@ -15,6 +16,7 @@ Dim someDay As Date
 Dim nDays As Integer
 Dim me As Person
 Dim explArray() As double
+Dim dull() As double
 Dim doof() As double
 Dim declArray() As double
 Rem  
@@ -31,6 +33,7 @@ Let me.test = Array(0, 8, 15)
 Let declArray = Array(9.0, 7.5, -6.4, 1.7, 0.0)
 Let explArray = Array(7.1, 0.5, -1.5)
 Let doof(3) = Array(0.4)
+Let dull = Array(-12.7, 96.03)
 Let values = Array(47, 11)
 End
 Rem  
