@@ -98,6 +98,7 @@
 \begin{algorithm}
 \caption{DateTests563}
 \SetKwFunction{FndaysInMonth423}{daysInMonth423}
+\tcc{ Several declaration and initialisation variants for test of Analyser, Executor, and Generators }
 \Prog{\FuncSty{DateTests563}}{
   \(Date\ someDay\leftarrow{}Date\{day:24,month:2,year:2017\}\)\;
   \(nDays\leftarrow{}\FndaysInMonth423(someDay)\)\;
@@ -107,6 +108,7 @@
   \(var\ declArray:array\ of\ double\leftarrow{}\{9.0,7.5,-6.4,1.7,0.0\}\)\;
   \(var\ explArray:double[3]\leftarrow{}\{7.1,0.5,-1.5\}\)\;
   \(double\ doof[3]\leftarrow{}\{0.4\}\)\;
+  \(double[2]dull\leftarrow{}\{-12.7,96.03\}\)\;
   \(values\leftarrow{}\{47,11\}\)\;
 }
 \end{algorithm}
