@@ -123,6 +123,7 @@
 \caption{DateTests563}
 \begin{algorithmic}[5]
 \Procedure{DateTests563}{ }
+\State \Comment{ Several declaration and initialisation variants for test of Analyser, Executor, and Generators }
   \Decl{Includes:}
     \State CommonTypes423
   \EndDecl
@@ -136,6 +137,7 @@
   \State \(var\ declArray:array\ of\ double\gets\{9.0,7.5,-6.4,1.7,0.0\}\)
   \State \(var\ explArray:double[3]\gets\{7.1,0.5,-1.5\}\)
   \State \(double\ doof[3]\gets\{0.4\}\)
+  \State \(double[2]dull\gets\{-12.7,96.03\}\)
   \State \(values\gets\{47,11\}\)
 \EndProcedure
 \end{algorithmic}
