@@ -1,3 +1,4 @@
+(* Several declaration and initialisation variants for test of Analyser, Executor, and Generators *)
 MODULE DateTests563;
 (* Generated by Structorizer 3.32-26 *)
 
@@ -30,6 +31,7 @@ VAR
   nDays: INTEGER;
   me: Person;
   explArray: ARRAY 3 OF LONGREAL;
+  dull: ARRAY 2 OF LONGREAL;
   doof: ARRAY 3 OF LONGREAL;
   declArray: ARRAY 50 OF LONGREAL;
 
@@ -131,6 +133,9 @@ BEGIN
   explArray[2] := -1.5;
   (* Hint: Automatically decomposed array initialization *)
   doof[0] := 0.4;
+  (* Hint: Automatically decomposed array initialization *)
+  dull[0] := -12.7;
+  dull[1] := 96.03;
   (* Hint: Automatically decomposed array initialization *)
   values[0] := 47;
   values[1] := 11;
