@@ -1,3 +1,4 @@
+{ Several declaration and initialisation variants for test of Analyser, Executor, and Generators }
 program DateTests563;
 { Generated by Structorizer 3.32-26 }
 
@@ -29,6 +30,7 @@ var
   nDays: Longint;
   me: Person;
   explArray: array [0..2] of Double;
+  dull: array [0..1] of Double;
   doof: array [0..2] of Double;
   declArray: array [0..49] of Double;
 
@@ -135,6 +137,9 @@ begin
   explArray[2] := -1.5;
   { Hint: Automatically decomposed array initialization }
   doof[0] := 0.4;
+  { Hint: Automatically decomposed array initialization }
+  dull[0] := -12.7;
+  dull[1] := 96.03;
   { Hint: Automatically decomposed array initialization }
   values[0] := 47;
   values[1] := 11;
