@@ -85,6 +85,7 @@
   \assign{\(var\ declArray:\ array\ of\ double\ \gets\ \{9.0,\ 7.5,\ -6.4,\ 1.7,\ 0.0\}\)}
   \assign{\(var\ explArray:\ double[3]\ \gets\ \{7.1,\ 0.5,\ -1.5\}\)}
   \assign{\(double\ doof[3]\ \gets\ \{0.4\}\)}
+  \assign{\(double[2]\ dull\ \gets\ \{-12.7,\ 96.03\}\)}
   \assign{\(values\ \gets\ \{47,\ 11\}\)}
 \end{struktogramm}
 
