@@ -1,5 +1,6 @@
 #!/bin/bash
 
+# Several declaration and initialisation variants for test of Analyser, Executor, and Generators 
 # (generated by Structorizer 3.32-26) 
 
 # Copyright (C) 2017-09-18 Kay Gürtzig 
@@ -45,7 +46,7 @@ function isLeapYear() {
 
  fi
 
- resulted9d034=${isLeapYear}
+ result612fc6eb=${isLeapYear}
 }
 
 # Computes the number of days the given month (1..12) 
@@ -76,7 +77,7 @@ function daysInMonth423() {
     # a separate element (cannot be performed 
     # as part of the condition of an Alternative) 
     isLeapYear ${aDate[year]}
-    isLeap=${resulted9d034}
+    isLeap=${result612fc6eb}
 
     if [[ ${isLeap} ]]
     then
@@ -92,7 +93,7 @@ function daysInMonth423() {
   ;;
  esac
 
- result4d3167f4=${days}
+ resulteafc191=${days}
 }
 # = = = = 8< = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = 
 
@@ -103,10 +104,11 @@ declare -A someDay
 declare -A me
 declare -A someDay=([day]=24 [month]=2 [year]=2017)
 daysInMonth423 someDay
-nDays=${result4d3167f4}
+nDays=${resulteafc191}
 declare -A today=([year]=2018 [month]=7 [day]=20)
 declare -A me=([name]="roger" [birth]=Date{1985, 3, 6} [test]={0, 8, 15})
 declare -a declArray=(9.0 7.5 $(( -6.4 )) 1.7 0.0)
 declare -a explArray=(7.1 0.5 $(( -1.5 )))
 declare -a doof=(0.4)
+declare -a dull=($(( -12.7 )) 96.03)
 declare -a values=(47 11)
