@@ -270,6 +270,8 @@ Current development version 3.32-26 (2025-02-06)
       C#, Java, and Javascript was defective (initialisation missing) <2>
 - 26: Bugfix #1187: Analyser unduly decried C-style array declarations <2>
 - 26: Bugfix #1188: Python export of C-style array declarations was wrong <2>
+- 26: Bugfix #1189: Pascal, Oberon, and Python export of Java-style array
+      declarations were defective (element type instead of variable name) <2> 
 
 Version 3.32 (2021-09-19) requiring Java 11 or newer
 - 01: Bugfix #851/2: SPECIAL-NAMES sections caused COBOL parser abort <2>
